--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 <body>
 
 <div style="position:absolute; width:100%; height:100%; z-index:-1; left:0; top:0;"> 
-<img src="https://filedn.eu/ltLpz9YGUS2hi1pJmklNfDb/en/dimfigure.JPG" height="100%" width="100%" style="position:absolute;left:0; top:0;"> 
+<img src="dimfigure.JPG" height="100%" width="100%" style="position:absolute;left:0; top:0;"> 
 </div>
 
 <div style="width:300px;height:50px;float:left"> 
 <form action="http://www.google.com/search" method="get"> 
 <input type="text" name="q" size="20" maxlength="255" value="" /> 
 <input type="submit" name="btnG" value="Google" /> 
-</form> 
+</form>
+<a href="https://zhu-mingyu.github.io" style="right: 15px; position: absolute; font-size:25px;color:red">中文（GitHub）</a>
+<a href="https://zhumingyu.com" style="right: 205px; position: absolute; font-size:25px;color:red">中文</a>
 </div> 
 
 <div style="left: 8px; position: absolute; top: 75px;font-size:45px;">Mingyu Zhu's Personal Web Page</div>
